--- a/doc/smp_phy_test.8
+++ b/doc/smp_phy_test.8
@@ -1,6 +1,6 @@
 .TH SMP_PHY_TEST "8" "October 2017" "smp_utils\-0.99" SMP_UTILS
 .SH NAME
-smp_phy_test \- invoke PHY TEST FUNTION SMP function
+smp_phy_test \- invoke PHY TEST FUNCTION SMP function
 .SH SYNOPSIS
 .B smp_phy_test
 [\fI\-\-control=CO\fR] [\fI\-\-dwords=DW\fR] [\fI\-\-expected=EX\fR]
@@ -123,3 +123,5 @@ This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
 .B smp_utils, sg_senddiag(sg3_utils)
+
+
