--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "October 2017" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_UTILS "8" "December 2017" "smp_utils\-0.99" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -14,8 +14,8 @@ used by storage systems. A SAS system is made up of Host Bus Adapters (HBAs
 typically containing SCSI initiators), disks (referred to in SCSI as
 both targets and logical units) and optionally some switching hardware
 called "expanders". Expanders are not SCSI devices so a new protocol was
-required to control and monitor them. Its full name is the SAS Serial
-Management Protocol which is abbreviated to SMP.
+required to control and monitor them. The protocol's full name is the SAS
+Serial Management Protocol which is abbreviated to SMP.
 .PP
 smp_utils is a package of utilities. Each utility sends an SMP function
 request to a \fISMP_DEVICE\fR (an SMP target). Some utilities may invoke the
@@ -290,14 +290,16 @@ upper level layers placed in a document called the SAS Protocol Layer and
 it was standardized as SPL ANSI INCITS 476\-2011. Next came SPL\-2 which
 was standardized as SPL\-2 ANSI INCITS 505\-2013. Then came SPL\-3 which
 was standardized as SPL\-3 ANSI INCITS 492\-2015. SPL\-4 is near
-standardization and its most recent draft is spl3r05.pdf. To avoid
-confusion, the multiple generations of SAS will be referred to in these man
-pages as SAS 1, 1.1, 2, 2.1 (SPL) and 3 (SPL\-2 and SPL\-3). Roughly
-speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6 Gbps, SAS\-3 at 12 Gbps and
-SAS\-4 at 22.5 Gbps. Drafts, including those just prior to standardization
-can be found at the http://www.t10.org site (e.g. spl\-r07.pdf and
-spl2r04c.pdf). INCITS policy now requires a registration to view these
-drafts, a break from t10.org tradition.
+standardization and its most recent draft is spl4r13.pdf while SPL\-5 work
+has started and its most recent draft is spl5r02.pdf. To lessen confusion,
+the multiple generations of SAS will be referred to in these man pages as
+SAS 1, 1.1, 2, 2.1 (SPL), 3 (SPL\-2 and SPL\-3), 4 (SPL\-4) and 5 (SPL\-5).
+Roughly speaking for the electrical and physical layers standards SAS\-1
+runs at 3 Gbps, SAS\-2 at 6 Gbps, SAS\-3 at 12 Gbps and SAS\-4 at 22.5 Gbps.
+Drafts, including those just prior to standardization can be found at the
+http://www.t10.org site (e.g. spl\-r07.pdf and spl2r04c.pdf). INCITS policy
+now requires a registration to view these drafts, a break from t10.org
+tradition.
 .PP
 The two utilities for reading and writing to GPIO registers, smp_read_gpio
 and smp_write_gpio, are defined in the Small Form Factor document SFF\-8485
@@ -326,3 +328,5 @@ This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
 .B sg_logs, sg_vpd, sg_ses(sg3_utils); sdparm(sdparm); lsscsi(lsscsi)
+
+
