--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.99 [20180113] [svn:r164]
+Changelog for smp_utils-0.99 [20180212] [svn:r165]
   - smp_discover(_list): add --dsn option to show
     device slot number in single line per phy summary
     - attached SAS device type, word SAS added (spl4r01)
@@ -10,6 +10,8 @@ Changelog for smp_utils-0.99 [20180113] [svn:r164]
     - add buffered phy burst size field (spl4r07)
     - add attached apta capable field
     - update phy capabilities decode (spl5r02)
+    - use Report general to get number phys rather
+      than loop until an error occurs
   - smp_rep_general: add extended fairness field
     - add initial time to delay expander forward open
       indication field
@@ -22,10 +24,13 @@ Changelog for smp_utils-0.99 [20180113] [svn:r164]
     - add smp_get_connector_type_str(), smp_get_num_nomult()
       and smp_get_llnum_nomult()
     - add dStrHexErr() and dStrHexStr()
+    - add hex2stdout, hex2stderr and hex2str
     - add smp_is_big_endian(), smp_all_zeros() and
       smp_all_ffs()
   - sync with spl5r02
   - cleanup configure.ac + Makefile.am
+  - update BSD license from 3 to 2 clause aka FreeBSD
+    license (without reference to FreeBSD project)
 
 Changelog for smp_utils-0.98 [20140526] [svn:r138]
   - add Linux aacraid support, interface name : aac
