--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER "8" "February 2015" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_DISCOVER "8" "February 2018" "smp_utils\-0.99" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
@@ -228,16 +228,22 @@ See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 The SMP DISCOVER function was introduced in SAS\-1, with small additions
 in SAS\-1.1 . There were a large number of additions in SAS\-2 . After
 SAS\-2 the protocol sections of SAS were split into another document
-series known as SPL. Now SPL and SPL\-2 are standards and SPL\-3 is in
-the draft stage.
+series known as the SAS Protocol Layer (SPL) and it was standardized as
+SPL ANSI INCITS 476\-2011. Next came SPL\-2 which was standardized as
+SPL\-2 ANSI INCITS 505\-2013.  Then came SPL\-3 which was standardized as
+SPL\-3 ANSI INCITS 492\-2015. SPL\-4 is near standardization and its most
+recent draft is spl4r13.pdf while SPL\-5 work has started and its most
+recent draft is spl5r03.pdf.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2015 Douglas Gilbert
+Copyright \(co 2006\-2018 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
 .B smp_utils, smp_discover_list, smp_phy_control
+
+
